examples/test/testpolicy18511.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18511
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key38: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value23
          key17: value39
      podSelector:
        matchLabels:
          key23: value9
          key32: value31
          key22: value28
